--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^3.1.6
+   
+  intl_phone_field: ^3.0.1
+  pin_code_fields: ^7.3.0
+  firebase_database: ^9.0.6
+  animated_theme_switcher: "^2.0.5"
+  shared_preferences: ^2.0.13
+  path_provider: ^2.0.9
+  image_picker: ^0.8.4+9
+  theme_provider: ^0.5.0
+  dotted_border: ^2.0.0+2
+  timeline_tile: ^2.0.0
+  firebase_auth: ^3.3.7
+  firebase_core: ^1.12.0
+  flutter_signin_button: ^2.0.0
+  google_sign_in: ^5.2.3
+  flutter_local_notifications: ^9.3.2
+  timezone: ^0.8.0
 
 dev_dependencies:
   flutter_test:
