--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.1.6
-   
   intl_phone_field: ^3.0.1
   pin_code_fields: ^7.3.0
   firebase_database: ^9.0.6
@@ -52,6 +51,7 @@ dependencies:
   google_sign_in: ^5.2.3
   flutter_local_notifications: ^9.3.2
   timezone: ^0.8.0
+  icon_picker: "^2.0.1"
 
 dev_dependencies:
   flutter_test:
@@ -76,8 +76,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - asset/images/ 
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
