--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.1.6
-  intl_phone_field: ^3.0.1
-  pin_code_fields: ^7.3.0
+    
   firebase_database: ^9.0.6
   animated_theme_switcher: "^2.0.5"
   shared_preferences: ^2.0.13
@@ -52,6 +51,9 @@ dependencies:
   flutter_local_notifications: ^9.3.2
   timezone: ^0.8.0
   icon_picker: "^2.0.1"
+  provider: ^6.0.2
+  flutter_slidable: ^1.2.0
+
 
 dev_dependencies:
   flutter_test:
