--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   shared_preferences: ^2.0.13
   path_provider: ^2.0.9
   image_picker: ^0.8.4+9
-  theme_provider: ^0.5.0
+  # theme_provider: ^0.5.0
   dotted_border: ^2.0.0+2
   timeline_tile: ^2.0.0
   firebase_auth: ^3.3.7
